--- a/Views/Home/TemPlateKit.cshtml
+++ b/Views/Home/TemPlateKit.cshtml
@@ -62,6 +62,7 @@
 							<link rel="stylesheet" href="~/wp-content/plugins/elementor-pro/assets/css/widget-posts.min.css">		<div class="elementor-posts-container elementor-posts elementor-posts--skin-classic elementor-grid">
 								@foreach (var item in ViewBag.Result)
 								{
+									int x = item.Id;
 									<article class="elementor-post elementor-grid-item post-254 envato_tk_templates type-envato_tk_templates status-publish has-post-thumbnail hentry">
 
 										<div class="elementor-post__text">
@@ -95,10 +96,8 @@
 											</div>
 											<h6>___________________________________</h6>
 											<p> Some pic</p>
-											<div>@item.Img</div>
-											<div>@item.Img</div>
-											<div>@item.Img</div>
-											<div>@item.Img</div>
+											<img width="160" height="336" src="~/@item.Img" />
+											
 											<h6>___________________________________</h6>
 											<div class="elementor-element elementor-element-07251aa elementor-author-box--avatar-yes elementor-author-box--name-yes elementor-author-box--biography-yes elementor-author-box--link-no elementor-widget elementor-widget-author-box" data-id="07251aa" data-element_type="widget" data-widget_type="author-box.default">
 												<div class="elementor-widget-container">
@@ -139,6 +138,7 @@
 
 										</div>
 									</article>
+									
 								}
 							</div>
 
@@ -409,178 +409,37 @@
 
 												.elementor-select-wrapper.remove-before:before {
 													content: "" !important
-												}</style>		<form class="elementor-form" method="post" name="New Form">
-												<input type="hidden" name="post_id" value="83" />
-												<input type="hidden" name="form_id" value="ef94d02" />
-												<input type="hidden" name="referer_title" value="Templates" />
-
-
-												<div class="elementor-form-fields-wrapper elementor-labels-above">
-													<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-name elementor-col-100">
-														<label for="form-field-name" class="elementor-field-label">
-															Name
-														</label>
-														<input size="1" type="text" name="form_fields[name]" id="form-field-name" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="Name">
-													</div>
-													<div class="elementor-field-type-email elementor-field-group elementor-column elementor-field-group-email elementor-col-100 elementor-field-required">
-														<label for="form-field-email" class="elementor-field-label">
-															Email
-														</label>
-														<input size="1" type="email" name="form_fields[email]" id="form-field-email" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="Email" required="required" aria-required="true">
-													</div>
-													<div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
-														<button type="submit" class="elementor-button elementor-size-md">
-															<span>
-																<span class="elementor-align-icon-left elementor-button-icon">
-																	<svg aria-hidden="true" class="e-font-icon-svg e-far-envelope" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"></path></svg>
-																</span>
-																<span class="elementor-button-text">Register</span>
+												}</style>
+											@foreach (var item in ViewBag.Result){
+											<form method="post" action="/Submission/submiss/@item.id">
+												<p>There are @ViewBag.number people register</p>
+												<div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
+													<label for="cars">Choose a recipe:</label>
+													<select id="id" name="id">
+														@foreach (var i in ViewBag.recipe)
+														{
+															<option value="@i.Id">@i.Title</option>
+														}
+														<option value="0">Add new recipe</option>
+													</select>
+													<button type="submit" class="elementor-button elementor-size-md">
+														<span>
+															<span class="elementor-align-icon-left elementor-button-icon">
+																<svg aria-hidden="true" class="e-font-icon-svg e-far-envelope" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"></path></svg>
 															</span>
-														</button>
-													</div>
+															<span class="elementor-button-text">Register</span>
+														</span>
+													</button>
 												</div>
 											</form>
+											}
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</section>
-					<div class="elementor-element elementor-element-504ec3e elementor-widget elementor-widget-heading" data-id="504ec3e" data-element_type="widget" data-widget_type="heading.default">
-							<div class="elementor-widget-container">
-								<h4 class="elementor-heading-title elementor-size-default">Latest Post</h4>
-							</div>
-						</div>
-						<div class="elementor-element elementor-element-97e525e elementor-grid-1 elementor-posts--thumbnail-left elementor-grid-tablet-2 elementor-grid-mobile-1 elementor-widget elementor-widget-posts" data-id="97e525e" data-element_type="widget" data-settings="{&quot;classic_columns&quot;:&quot;1&quot;,&quot;classic_row_gap&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:21,&quot;sizes&quot;:[]},&quot;classic_columns_tablet&quot;:&quot;2&quot;,&quot;classic_columns_mobile&quot;:&quot;1&quot;,&quot;classic_row_gap_tablet&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;classic_row_gap_mobile&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="posts.classic">
-							<div class="elementor-widget-container">
-								<div class="elementor-posts-container elementor-posts elementor-posts--skin-classic elementor-grid">
-									<article class="elementor-post elementor-grid-item post-80 post type-post status-publish format-standard has-post-thumbnail hentry category-kitchen-tips tag-cooking tag-food tag-kitchen tag-recipes">
-										<a class="elementor-post__thumbnail__link" href="~/2022/04/09/how-to-peel-hard-boiled-eggs-perfectly-every-single-time/index.html">
-											<div class="elementor-post__thumbnail"><img width="1080" height="755" src="~/wp-content/uploads/sites/2/2022/04/greek-salad-and-boiled-eggs-.jpg" class="attachment-full size-full wp-image-81" alt="Greek salad and boiled eggs." loading="lazy" /></div>
-										</a>
-										<div class="elementor-post__text">
-											<div class="elementor-post__title">
-												<a href="~/2022/04/09/how-to-peel-hard-boiled-eggs-perfectly-every-single-time/index.html">
-													How to Peel Hard Boiled Eggs Perfectly, Every Single Time
-												</a>
-											</div>
-											<div class="elementor-post__meta-data">
-												<span class="elementor-post-author">
-													rocken
-												</span>
-												<span class="elementor-post-date">
-													April 9, 2022
-												</span>
-											</div>
-										</div>
-									</article>
-									<article class="elementor-post elementor-grid-item post-77 post type-post status-publish format-standard has-post-thumbnail hentry category-kitchen-tips tag-cooking tag-food tag-kitchen tag-recipes">
-										<a class="elementor-post__thumbnail__link" href="~/2022/04/09/of-course-ina-gartens-ice-cream-hack-is-totally-brilliant/index.html">
-											<div class="elementor-post__thumbnail"><img width="1080" height="720" src="~/wp-content/uploads/sites/2/2022/04/lemon-ice-cream.jpg" class="attachment-full size-full wp-image-78" alt="Lemon Ice Cream" loading="lazy" /></div>
-										</a>
-										<div class="elementor-post__text">
-											<div class="elementor-post__title">
-												<a href="~/2022/04/09/of-course-ina-gartens-ice-cream-hack-is-totally-brilliant/index.html">
-													Of Course Ina Garten&#8217;s Ice Cream Hack Is Totally Brilliant
-												</a>
-											</div>
-											<div class="elementor-post__meta-data">
-												<span class="elementor-post-author">
-													rocken
-												</span>
-												<span class="elementor-post-date">
-													April 9, 2022
-												</span>
-											</div>
-										</div>
-									</article>
-									<article class="elementor-post elementor-grid-item post-74 post type-post status-publish format-standard has-post-thumbnail hentry category-insight tag-cooking tag-food tag-kitchen tag-recipes">
-										<a class="elementor-post__thumbnail__link" href="~/2022/04/09/passover-seder-for-25-totally-possible/index.html">
-											<div class="elementor-post__thumbnail"><img width="1080" height="721" src="~/wp-content/uploads/sites/2/2022/04/top-view-of-matza-cookies-and-wine-on-table-passover-tale-concept.jpg" class="attachment-full size-full wp-image-75" alt="top view of matza, cookies and wine on table, Passover Tale concept" loading="lazy" /></div>
-										</a>
-										<div class="elementor-post__text">
-											<div class="elementor-post__title">
-												<a href="~/2022/04/09/passover-seder-for-25-totally-possible/index.html">
-													Passover Seder for $25? Totally Possible
-												</a>
-											</div>
-											<div class="elementor-post__meta-data">
-												<span class="elementor-post-author">
-													rocken
-												</span>
-												<span class="elementor-post-date">
-													April 9, 2022
-												</span>
-											</div>
-										</div>
-									</article>
-									<article class="elementor-post elementor-grid-item post-71 post type-post status-publish format-standard has-post-thumbnail hentry category-cookbook tag-cooking tag-food tag-kitchen tag-recipes">
-										<a class="elementor-post__thumbnail__link" href="~/2022/04/09/salad-freaks-unite-our-cookbook-is-finally-here/index.html">
-											<div class="elementor-post__thumbnail"><img width="1080" height="720" src="~/wp-content/uploads/sites/2/2022/04/old-cook-book-with-ingredients.jpg" class="attachment-full size-full wp-image-72" alt="Old cook book with ingredients" loading="lazy" /></div>
-										</a>
-										<div class="elementor-post__text">
-											<div class="elementor-post__title">
-												<a href="~/2022/04/09/salad-freaks-unite-our-cookbook-is-finally-here/index.html">
-													Salad Freaks Unite—Our Cookbook Is Finally Here
-												</a>
-											</div>
-											<div class="elementor-post__meta-data">
-												<span class="elementor-post-author">
-													rocken
-												</span>
-												<span class="elementor-post-date">
-													April 9, 2022
-												</span>
-											</div>
-										</div>
-									</article>
-									<article class="elementor-post elementor-grid-item post-68 post type-post status-publish format-standard has-post-thumbnail hentry category-kitchen-tips tag-cooking tag-food tag-kitchen tag-recipes">
-										<a class="elementor-post__thumbnail__link" href="~/2022/04/09/whats-the-difference-between-prawns-shrimp/index.html">
-											<div class="elementor-post__thumbnail"><img width="840" height="560" src="~/wp-content/uploads/sites/2/2022/04/roasted-prawns-shrimps-in-frying-pan-with-lemon-and-chili-pepper-e1649757645348.jpg" class="attachment-full size-full wp-image-69" alt="Roasted Prawns Shrimps in frying pan with lemon and chili pepper" loading="lazy" /></div>
-										</a>
-										<div class="elementor-post__text">
-											<div class="elementor-post__title">
-												<a href="~/2022/04/09/whats-the-difference-between-prawns-shrimp/index.html">
-													What’s the Difference Between Prawns &#038; Shrimp?
-												</a>
-											</div>
-											<div class="elementor-post__meta-data">
-												<span class="elementor-post-author">
-													rocken
-												</span>
-												<span class="elementor-post-date">
-													April 9, 2022
-												</span>
-											</div>
-										</div>
-									</article>
-									<article class="elementor-post elementor-grid-item post-63 post type-post status-publish format-standard has-post-thumbnail hentry category-kitchen-tips">
-										<a class="elementor-post__thumbnail__link" href="~/2022/04/09/the-absolute-best-way-to-make-an-egg-sandwich/index.html">
-											<div class="elementor-post__thumbnail"><img width="1080" height="747" src="~/wp-content/uploads/sites/2/2022/04/plate-of-poached-egg-sandwich.jpg" class="attachment-full size-full wp-image-65" alt="plate of poached egg sandwich" loading="lazy" /></div>
-										</a>
-										<div class="elementor-post__text">
-											<div class="elementor-post__title">
-												<a href="~/2022/04/09/the-absolute-best-way-to-make-an-egg-sandwich/index.html">
-													The Absolute Best Way to Make an Egg Sandwich
-												</a>
-											</div>
-											<div class="elementor-post__meta-data">
-												<span class="elementor-post-author">
-													rocken
-												</span>
-												<span class="elementor-post-date">
-													April 9, 2022
-												</span>
-											</div>
-										</div>
-									</article>
-								</div>
-
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+					
 		</section>
 	</div>
 
