--- a/Views/Shared/_Layoutweb.cshtml
+++ b/Views/Shared/_Layoutweb.cshtml
@@ -965,10 +965,7 @@
                                                             <ul class="sub-menu elementor-nav-menu--dropdown">
                                                                 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-28"><a href="/Home/FAQ" class="elementor-sub-item">FAQ</a></li>
                                                                 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-27"><a href="/Home/PricingPlan" class="elementor-sub-item">Pricing Plan</a></li>
-                                                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-24"><a href="/Home/Team" class="elementor-sub-item">Team</a></li>
-                                                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-29"><a href="~/index81b6.html?elementor_library=yumma-v1-archive" class="elementor-sub-item">Blog</a></li>
-                                                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-30"><a href="~/2022/04/09/whats-the-difference-between-prawns-shrimp/index.html" class="elementor-sub-item">Single Post</a></li>
-                                                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-32"><a href="~/indexbd79.html?elementor_library=yumma-v1-error-404" class="elementor-sub-item">Error 404</a></li>
+                                                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-24"><a href="/Home/Contest" class="elementor-sub-item">Contest</a></li>
                                                             </ul>
                                                         </li>
                                                     </ul>
